tulip-factory-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "3"
  creationTimestamp: 2018-12-07T16:07:25Z
  generation: 4
  labels:
    deploy_group: onprem
  name: tulip-factory
  namespace: default
  resourceVersion: "500379"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/tulip-factory
  uid: 301e4bfc-fa3a-11e8-8037-0e87042f8ca4
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: factory
      customer: tulip
      quarantined: "false"
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: factory
        app_version: 0.151.0-74_0001d25ad
        customer: tulip
        deployed/as_treeish: HEAD
        deployed/by: root
        deployed/commit: 0001d25ad6e8cc39e0d79a675411e752b65707b0
        helm_chart: factory-0.151.0-74_0001d25ad
        quarantined: "false"
    spec:
      containers:
      - command:
        - /usr/local/bin/node
        - /srv/factory/bundle/main.js
        env:
        - name: ROOT_URL
          valueFrom:
            configMapKeyRef:
              key: root_url
              name: tulip-factory
        - name: MONGO_URL
          valueFrom:
            secretKeyRef:
              key: mongo_url
              name: tulip-factory
        - name: MONGO_OPLOG_URL
          valueFrom:
            secretKeyRef:
              key: url
              name: tulip-mongo-oplog-url
        - name: METEOR_SETTINGS
          valueFrom:
            configMapKeyRef:
              key: settings.json
              name: tulip-factory
        - name: FACTORY_SERVER_CONSOLE_LOG_FORMAT
          value: json
        - name: FACTORY_CLIENT_LOGS_LEVEL_STRING_FORMAT
          value: "1"
        image: leader.telekube.local:5000/tulip/factory:0.151.0-74_0001d25ad
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
        name: factory
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
        resources:
          requests:
            cpu: "0"
            memory: "0"
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/tulip/conf.json
          name: config-map
          subPath: conf.json
        - mountPath: /etc/tulip/deploy_info.json
          name: secret
          subPath: deploy_info.json
        - mountPath: /var/log/tulip
          name: logs
      - command:
        - /bin/tail
        - -F
        - /var/log/tulip/client.log
        image: leader.telekube.local:5000/busybox
        imagePullPolicy: Always
        name: client-logs
        resources:
          limits:
            cpu: 2m
            memory: 4Mi
          requests:
            cpu: 1m
            memory: 48Ki
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/log/tulip
          name: logs
          readOnly: true
      dnsPolicy: ClusterFirst
      hostAliases:
      - hostnames:
        - rhel-test.tulip.co
        ip: 10.100.146.147
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: secret
        secret:
          defaultMode: 420
          secretName: tulip-factory
      - configMap:
          defaultMode: 420
          name: tulip-factory
        name: config-map
      - emptyDir: {}
        name: logs
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-12-07T16:07:25Z
    lastUpdateTime: 2018-12-11T20:59:03Z
    message: ReplicaSet "tulip-factory-6589565df5" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  - lastTransitionTime: 2018-12-11T23:59:19Z
    lastUpdateTime: 2018-12-11T23:59:19Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  observedGeneration: 4
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1
